# remote-audio

./: .gitignore  Makefile.am  autogen.sh  configure.ac
.github/docker/: Dockerfile
.github/workflows/: build-dev.yml  release.yml
receiver/: Makefile.am  main.c
scripts/: 02-update-ddns  Makefile.am  remote-audio-receiver.service  remote-audio-transmitter.service
transmitter/: Makefile.am  main.c
